--- a/app/src/main/res/layout/item_snapshot.xml
+++ b/app/src/main/res/layout/item_snapshot.xml
@@ -36,7 +36,7 @@
         android:layout_marginStart="@dimen/common_margin_default"
         android:layout_marginBottom="@dimen/common_margin_default"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/imgPhoto"/>
 
     <ImageView
         android:id="@+id/imgPhoto"
@@ -49,6 +49,45 @@
         app:layout_constraintTop_toBottomOf="@id/btnDelete"
         app:layout_constraintBottom_toTopOf="@id/cbLike"/>
 
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/comentariosRecyclerView"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="24dp"
+        android:layout_marginBottom="8dp"
+        android:nestedScrollingEnabled="false"
+        android:scrollbars="vertical"
+        app:layout_constraintBottom_toTopOf="@id/etInputComentario"
+        app:layout_constraintEnd_toStartOf="@id/btnDelete"
+        app:layout_constraintStart_toEndOf="@+id/cbLike"
+        app:layout_constraintTop_toBottomOf="@id/imgPhoto" />
+
+    <EditText
+        android:id="@+id/etInputComentario"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="120dp"
+        android:layout_marginBottom="8dp"
+        android:hint="comenta"
+        android:inputType="textMultiLine"
+        app:layout_constraintStart_toStartOf="@id/cbLike"
+        app:layout_constraintEnd_toStartOf="@id/btnDelete"
+        app:layout_constraintTop_toBottomOf="@id/comentariosRecyclerView" />
+
+
+
+    <Button
+        android:id="@+id/btnComentar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginEnd="16dp"
+        android:text="comentar"
+        app:layout_constraintBottom_toBottomOf="@+id/etInputComentario"
+        app:layout_constraintEnd_toEndOf="@+id/btnDelete"
+        app:layout_constraintTop_toTopOf="@+id/etInputComentario" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
